--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,16 @@
         <h3>RPG Game</h3>
       </div>
       <div class="work">
+          <a href="https://darylacut.github.io/TriviaGame/">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
+          </a>
       </div>
       <div class="work">
+        
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+      
 
         <h3>Rutgers Info Widget</h3>
       </div>
